[gd_scene load_steps=2 format=3 uid="uid://cp8jn5k3wm9rx"]

[ext_resource type="Script" path="res://scripts/ui/streak_game_over.gd" id="1_gameover"]

[node name="StreakGameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gameover")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.18, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -200.0
offset_right = 180.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Streak Ended!"
horizontal_alignment = 1

[node name="StreakLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Streak: 0"
horizontal_alignment = 1

[node name="RatingProgressLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "800 â†’ 1250"
horizontal_alignment = 1

[node name="RecordLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ShowSolutionButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Show Solution"

[node name="PlayAgainButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 45)
theme_override_font_sizes/font_size = 18
text = "Play Again"

[node name="MenuButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Main Menu"
